change method due to Java backward compatibility